	  Ken Petit reports that this simple command can exceed its 768
	  stack size under certain conditions.  The size is marginal and
	  has been increased to 1024 by default but is also now configurable
	  (2013-10-14).
	* apps/Makefile:  Need to include external/Make.defs if we want
	  allow external applications to participate in the NuttX
	  configuration.  Suggested by gdi@embedders.org (2013-10-14).
	* apps/examples/cc3300: Updates as part of larger re-organizaion
	  of CC3000 logic by David Sidrane (2013-10-16).
	* apps/examples/random:  Add a simple test that dumps values from
	  /dev/random (2013-10-20).
	* apps/examples/cc3000:  Extensions and enhancements from David
	  Sidrane (2013-10-23).
	* apps/netutils/telnetd/telnetd_driver.c:  Missing argument to
	  debug statement can cause crashes in certain error conditions.
	  From David Sidrane (2013-10-24).
	* apps/examples/cc3000:  Updates from David Sidrane.  Plus
	  some kruft removal (2013-10-24).
	* apps/examples/can/can_main.c:  Correct an error in a debug
	  statement.  From Martin Lederhilger (2013-10-24).
	* apps/examples/adc:  Add support so that a ADC driven by
	  software triggering can be tested (2013-10-25).
	* apps/examples/cc3000:  Updates from David Sidrane (2013-10-25).
	* apps/system/nxplayer:  Implements a command line media
	  player.  From Ken Pettit (2013-10-27).
	* apps/system/nxplayer: Add logic to verify the audio sub-format.
	  From Ken Pettit (2013-10-28).

6.31 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/platform:  A new home for board-specific application code
	  (2013-10-30).
	* apps/include/platform/configdata.h:  Define an interface that can be
	  used to manage platform-specific storage of configuration data
	  (2013-10-30).
	* apps/examples/cc3000: Fine tuning of memory usage from David Sidrane
	  (2013-10-30).
	* apps/platform/mikroe-stm32f4: Now supports storage of configuration
	  data.  From Ken Pettit (2013-10-30).
