@@ -716,4 +716,6 @@
 	  (2013-10-30).
 	* apps/platform/mikroe-stm32f4: Now supports storage of configuration
 	  data.  From Ken Pettit (2013-10-30).
+	* apps/nshlib/nsh_dbgcmds.c and others:  Add skip= and count=
+	  options to the hexdump command.  From Ken Pettit (2013-11-1).
 
